# eas-tools

./: .gitmodules  meson.build
conex/: file.cpp  file.h  header.h  shower.h
corsika/: binaryfile.cpp  binaryfile.h  fstream-iterator.cpp  fstream-iterator.h  meson.build  particle.cpp  particle.h  particle_iterator.cpp  particle_iterator.h  shower.cpp  shower.h
examples/: check_stack.cpp  double_bump_finder.cpp  fit_conex_anomalous.cpp  fit_conex_profiles.cpp  fit_reduce_parameters.cpp  get_alpha.cpp  main.cpp  make_stack.cpp  meson.build  parametrize_conex_profiles.cpp  plot_conex_profiles.cpp  plot_coreas_data.cpp  plot_corsika_profiles.cpp  plot_lateral_distribution.cpp  select_anomalous.cpp
examples/double-bump/: fit_conex_anomalous.cpp  fitters.h  meson.build  multipagecanvas.h  plot_anomalous_profile.cpp  select_anomalous.cpp
include/conex/: file.h  header.h  shower.h
include/conex/extensions/: event.h  file.h  interaction.h  interaction_tree.h  particle.h  projectile.h
include/corsika/: binaryfile.h  binarystream.h  particle.h  particle_iterator.h  profile.h  shower.h  subblock.h
include/models/: atmosphere.h  dedx_profile.h
include/units/: units.h
include/util/: constants.h  coordinates.h  frame.h  gaisser_hillas_fit.h  math.h  matrix.h  point.h  rotation_matrix.h  type_traits.h  units.h  vector.h
src/: conex-file.h  conex-header.h  conex-shower.h  corsika-binaryfile.cpp  corsika-file.cpp  corsika-file.h  corsika-fstream-iterator.cpp  corsika-fstream-iterator.h  corsika-fstream.cpp  corsika-fstream.h  corsika-shower.cpp  corsika-subblock.cpp  corsika-subblock.h  corsika-word_t.cpp  corsika-word_t.h  main.cpp  meson.build
src/conex/: file.cpp  file.h  file.iterator.cpp  meson.build  shower.cpp  shower.h
src/conex/extensions/: event.cpp  event.h  file.cpp  file.h  interaction.cpp  interaction.h  interaction_tree.cpp  meson.build  particle.cpp  particle.h  projectile.cpp  projectile.h
src/corsika/: binaryfile.cpp  binaryfile.h  binarystream-iterator.cpp  binarystream-iterator.h  binarystream.cpp  binarystream.h  binarystream.iterator.cpp  cherenkov_photon.cpp  cherenkov_photon.h  fstream-iterator.cpp  fstream-iterator.h  fstream.cpp  fstream.h  longfile.cpp  longfile.h  longfile.iterator.cpp  meson.build  particle.cpp  particle_iterator.cpp  particle_iterator.h  profile.cpp  profile.h  shower.cpp  shower.h  subblock.cpp  subblock.h  word_t.cpp  word_t.h
src/models/: dedx_profile.cpp  meson.build
src/util/: gaisser_hillas_fit.cpp  gaisser_hillas_fit.h  math.cpp  math.h  meson.build  vector.cpp
util/: consants.h  gaisser_hillas_fit.cpp
