corsika_sources = [
  'word_t.cpp',
  'binarystream.cpp',
  'binarystream.iterator.cpp',
  'subblock.cpp',
  'shower.cpp',
  'particle.cpp',
  'particle_iterator.cpp',
  'longfile.cpp',
  'longfile.iterator.cpp',
  'profile.cpp'
]

libcorsika = shared_library(
  'corsika',
  corsika_sources,
  include_directories : inc_src,
  install: true
)